# vectortools

./: .gitignore  .gitmodules  LICENSE.md  README.md  vtool_operator.h  vtool_utils.h  vtool_windows.h
cmake/: CMakeLists.txt  CMakePresets.json  build_all.sh  main_test.cpp
src/: vectortools.h  vectortools_test.cpp  vtool_fft.h  vtool_traits.h
